client/src/index.css
/* This file contains the global styles for the application. */
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');

:root {
  font-family: "Montserrat", system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  --color-white: #EDEDED;
  --color-black: #2E2D2D;
  --color-silver: #A3A2A2;
  --color-primary: #77E1B8;
  --color-primary-muted: #D0DED9;
  --color-primary-light: #BCF0DC;
  --color-background: #E9EFED;



  color: var(--color-black);
  background-color: var(--color-background);

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

a {
  font-weight: 500;
  color: var(--color-primary);
  text-decoration: None;
  transition: color 0.3s;
}

a:hover {
  color: var(--color-primary-muted);
}
html {
  scroll-behavior: smooth;
}

body {
  margin: 0;
  min-width: 100vw;
  min-height: 100vh;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

button {
  border-radius: 6px;
  border: 1px solid var(--color-silver);
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  cursor: pointer;
  transition: border-color 0.25s;
  box-shadow: 0 2px 4px var(--color-silver);
}

button:hover {
  border-color: var(--color-primary);
}

button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

::-webkit-scrollbar {
  width: 0.7rem;
  height: 0.7rem;
}
::-webkit-scrollbar-track {
  background: var(--color-primary-muted);
  border-radius: 0.5rem;
}
/* Handle */
::-webkit-scrollbar-thumb {
  background: var(--color-silver);
  border-radius: 0.5rem;
}
::-webkit-scrollbar-thumb:hover {
  background: var(--color-primary);
}

